remove verification code
