# db/models/user.js
@@ -2,7 +2,6 @@
 
 const bcrypt = require('bcryptjs');
 const { SALT_ROUNDS } = require('../../constants');
-const uuid = require('uuid').v4;
 
 module.exports = (sequelize, DataTypes) => {
 	const User = sequelize.define('User', {
@@ -15,21 +14,15 @@ module.exports = (sequelize, DataTypes) => {
 			type: DataTypes.STRING,
 			required: true
 		},
-		verificationLevel: {
-			type: DataTypes.INTEGER,
-			defaultValue: 0
+		verified: {
+			type: DataTypes.BOOLEAN,
+			defaultValue: false
 		}
 	}, {
 		hooks: {
 			beforeCreate: (user) => {
 				const salt = bcrypt.genSaltSync(SALT_ROUNDS);
 				user.password = bcrypt.hashSync(user.password, salt);
-			},
-			afterCreate: (user) => {
-				return sequelize.models.VerificationCode.create({
-					userId: user.id,
-					code: uuid()
-				});
 			}
 		}
 	});
@@ -37,7 +30,6 @@ module.exports = (sequelize, DataTypes) => {
 		// associations can be defined here
 		User.hasMany(models.Task, { foreignKey: 'userId' });
 		User.hasOne(models.Twitter, { foreignKey: 'userId' });
-		User.hasOne(models.VerificationCode, { foreignKey: 'userId' });
 	};
 
 	User.prototype.validPassword = (givenPassword, userPassword) => bcrypt.compare(givenPassword, userPassword);
